--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
 
     <!-- PROJECTS -->
     <section id="portfolio" class="min-vh-100">
-      
+
       <div class="container">
         <!-- SECTION TITLE -->
         <div class="row">
@@ -362,7 +362,7 @@
 
         <div class="row g-4">
 
-          <div class="col-md-4" >
+          <div class="col-md-4">
             <div class="portfolio-item image-zoom">
               <div class="image-zoom-wrapper">
                 <img src="./assets/img/project-1.jpg" alt="">
@@ -421,15 +421,62 @@
 
 
 
-
-
-
-
   </main>
 
-  <footer>
+  <!-- FOOTER -->
+  <footer class="bg-dark text-white">
+
+    <div class="footer-top mb-2">
+      <div class="container">
+        <div class="row gy-5">
+
+          <div class="col-lg-3 col-sm-6">
+            <img src="./assets/Imagotipo--300.png" alt="Imagotipo ROD Consulting">
+          </div>
+
+          <div class="col-lg-3 col-sm-6">
+            <h5 class="mb-0">ROD CONSULTING</h5>
+            <div class="line"></div>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolores voluptatum ducimus est vel voluptates</p>
+          </div>
+
+          <div class="col-lg-3 col-sm-6">
+            <h5 class="mb-0">SERVICIOS</h5>
+            <div class="line"></div>
+            <ul>
+              <li>Diseño</li>
+              <li>Construcción</li>
+              <li>Mantenimiento</li>
+              <li>Consultoria</li>
+              <li>Estudios, Análisis y mediciones</li>
+            </ul>
+          </div>
+
+          <div class="col-lg-3 col-sm-6">
+            <h5 class="mb-0">CONTACTO</h5>
+            <div class="line"></div>
+            <ul>
+              <li>Abaneta - Antioquia</li>
+              <li>+573188737324</li>
+              <li>www.example.com</li>
+            </ul>
+          </div>
+
+        </div>
+      </div>
+    </div>
+
+    <div class="footer-bottom py-3">      
+        <div class="container text-center">
+          <p class="mb-0">ROD Consulting Ingenieria Eléctrica © 2022</p>
+        </div>
+        <div class="container text-center">
+          <p class="mb-0">Web design By <a href="https://github.com/cmarioep">@cmarioep</a></p>
+        </div>
+    </div>
 
   </footer>
+
 
   <script type="module" src="/main.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
