--- a/index.html
+++ b/index.html
@@ -87,19 +87,19 @@
             <a class="nav-link active" aria-current="page" href="#">Home</a>
           </li>
 
-          <li class="nav-item mx-4">
+          <li class="nav-item mx-4 border-top">
             <a class="nav-link active" href="#services">Servicios</a>
           </li>
 
-          <li class="nav-item mx-4">
+          <li class="nav-item mx-4 border-top">
             <a class="nav-link active" href="#">Proyectos</a>
           </li>
 
-          <li class="nav-item mx-4">
+          <li class="nav-item mx-4 border-top">
             <a class="nav-link active" href="#about">Conocenos</a>
           </li>
 
-          <li class="nav-item mx-4">
+          <li class="nav-item mx-4 border-top">
             <a class="nav-link active" href="#">Contacto</a>
           </li>
 
