--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <title>Vite App</title>
     </head>
     <body>
+      
         <!-- HEADER -->
         <header class="py-2">
             <div class="container-fluid fs-6">
@@ -59,6 +60,7 @@
                 </div>
             </div>
         </header>
+
         <!-- NAVBAR -->
         <nav class="navbar sticky-top box-shadow navbar-expand-lg navbar-dark bg-primary fs-4">
             <div class="navbar-menu container-fluid">
@@ -94,6 +96,7 @@
                 </div>
             </div>
         </nav>
+
         <main>
             <!-- HERO -->
             <section id="hero" class="hero hero-background min-vh-100 position-relative">
@@ -117,7 +120,7 @@
                                 <h1 class="hero-title text-uppercase fw-semibold display-1 text-white">ROD CONSULTING</h1>
                                 <h5 class="mt-3 mb-4 text-white">Ingeniería Eléctrica, Diseño, Construcción y Consultoría</h5>
                                 <div>
-                                    <a href="#services" class="btn btn-primary m-2">Nuestros Servicios</a>
+                                    <a href="#services" class="btn btn-primary m-2">Servicios</a>
                                     <a href="https://wa.link/rftxys" class="btn btn-primary m-2">Contáctenos</a>
                                 </div>
                             </div>
@@ -125,6 +128,7 @@
                     </div>
                 </div>
             </section>
+
             <!-- ABOUT -->
             <section id="about" class="min-vh-100">
                 <div class="container">
@@ -176,6 +180,7 @@
                     </div>
                 </div>
             </section>
+
             <!-- SERVICES -->
             <section id="services" class="min-vh-100 border-top">
                 <div class="container">
@@ -252,6 +257,7 @@
                     </div>
                 </div>
             </section>
+
             <!-- COUNTER -->
             <section id="counter" class="counter">
                 <div class="container text-center">
@@ -271,6 +277,7 @@
                     </div>
                 </div>
             </section>
+
             <!-- PROJECTS -->
             <section id="projects">
                 <div class="container">
@@ -342,6 +349,7 @@
                     </div>
                 </div>
             </section>
+
             <!-- ClIENTES -->
             <section class="border-top">
                 <div class="container">
@@ -386,7 +394,9 @@
                     </div>
                 </div>
             </section>
+
         </main>
+
         <!-- FOOTER -->
         <footer id="contact" class="bg-dark text-white py-4">
             <div class="footer-top mb-2">
@@ -436,7 +446,9 @@
                 </div>
             </div>
         </footer>
+
         <script type="module" src="/main.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+
     </body>
 </html>
