--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
         <section id="services" class="min-vh-100 border-top">
             <div class="container">
                 <div class="row">
-                    <div class="col-12 text-center" data-aos="fade-down" data-aos-delay="50">
+                    <div class="col-12 text-center" data-aos="fade-down">
                         <div class="section-title">
                             <h1 class="display-4 fw-semibold">Portafolio de Servicios</h1>
                             <div class="section-title-line"></div>
@@ -183,7 +183,7 @@
                     </div>
                     <div class="row text-center">
                         <div class="col-lg-4 col-sm-6">
-                            <div class="service-card box-shadow p-lg-5 p-4" data-aos="fade-down" data-aos-delay="50">
+                            <div class="service-card box-shadow p-lg-5 p-4" data-aos="fade-down">
                                 <div class="iconbox">
                                     <i class="ri-pen-nib-fill"></i>
                                 </div>
@@ -191,7 +191,7 @@
                                 <h5 class="mt-4 mb-3">Diseño eléctrico residencial, comercial e Indusrial</h5>
                             </div>
                         </div>
-                        <div class="col-lg-4 col-sm-6" data-aos="fade-down" data-aos-delay="150">
+                        <div class="col-lg-4 col-sm-6" data-aos="fade-down">
                             <div class="service-card box-shadow p-lg-5 p-4">
                                 <div class="iconbox">
                                     <i class="ri-pen-nib-fill"></i>
@@ -200,7 +200,7 @@
                                 <h5 class="mt-4 mb-3">Construcción de instalaciones eléctricas</h5>
                             </div>
                         </div>
-                        <div class="col-lg-4 col-sm-6" data-aos="fade-down" data-aos-delay="250">
+                        <div class="col-lg-4 col-sm-6" data-aos="fade-down">
                             <div class="service-card box-shadow p-lg-5 p-4">
                                 <div class="iconbox">
                                     <i class="ri-pen-nib-fill"></i>
@@ -209,7 +209,7 @@
                                 <h5 class="mt-4 mb-3">Consultoría técnica en Ingeniería eléctrica</h5>
                             </div>
                         </div>
-                        <div class="col-lg-4 col-sm-6" data-aos="fade-down" data-aos-delay="350">
+                        <div class="col-lg-4 col-sm-6" data-aos="fade-down">
                             <div class="service-card box-shadow p-lg-5 p-4">
                                 <div class="iconbox">
                                     <i class="ri-pen-nib-fill"></i>
@@ -218,7 +218,7 @@
                                 <h5 class="mt-4 mb-3">Estudios eléctricos, análisis y mediciones</h5>
                             </div>
                         </div>
-                        <div class="col-lg-4 col-sm-6" data-aos="fade-down" data-aos-delay="450">
+                        <div class="col-lg-4 col-sm-6" data-aos="fade-down">
                             <div class="service-card box-shadow p-lg-5 p-4">
                                 <div class="iconbox">
                                     <i class="ri-pen-nib-fill"></i>
@@ -227,7 +227,7 @@
                                 <h5 class="mt-4 mb-3">Mantenimiento de instalaciones y equipos</h5>
                             </div>
                         </div>
-                        <div class="col-lg-4 col-sm-6" data-aos="fade-down" data-aos-delay="550">
+                        <div class="col-lg-4 col-sm-6" data-aos="fade-down">
                             <div class="service-card box-shadow p-lg-5 p-4">
                                 <div class="iconbox">
                                     <i class="ri-pen-nib-fill"></i>
@@ -245,15 +245,15 @@
         <section id="counter" class="counter">
             <div class="container text-center">
                 <div class="row g-4">
-                    <div class="col-sm-4" data-aos="fade-down" data-aos-delay="50">
+                    <div class="col-sm-4" data-aos="fade-down">
                         <h1 class="text-white display-4">100%</h1>
                         <h6 class="text-uppercase mb-0 text-white mt-3">Excelencia y calidad</h6>
                     </div>
-                    <div class="col-sm-4" data-aos="fade-down" data-aos-delay="150">
+                    <div class="col-sm-4" data-aos="fade-down">
                         <h1 class="text-white display-4">500+</h1>
                         <h6 class="text-uppercase mb-0 text-white mt-3">Proyectos Exitosos</h6>
                     </div>
-                    <div class="col-sm-4" data-aos="fade-down" data-aos-delay="250">
+                    <div class="col-sm-4" data-aos="fade-down">
                         <h1 class="text-white display-4">10+</h1>
                         <h6 class="text-uppercase mb-0 text-white mt-3">Años de Experiencia</h6>
                     </div>
@@ -293,7 +293,7 @@
                             </a>
                         </div>
                     </div>
-                    <div class="col-md-4" data-aos="fade-down" data-aos-delay="200">
+                    <div class="col-md-4" data-aos="fade-down" data-aos-delay="100">
                         <div class="portfolio-item image-zoom">
                             <div class="image-zoom-wrapper">
                                 <img src="./assets/img/project-3.jpg" alt="">
@@ -311,7 +311,7 @@
                             </a>
                         </div>
                     </div>
-                    <div class="col-md-4" data-aos="fade-down" data-aos-delay="300">
+                    <div class="col-md-4" data-aos="fade-down" data-aos-delay="100">
                         <div class="portfolio-item image-zoom">
                             <div class="image-zoom-wrapper">
                                 <img src="./assets/img/project-5.jpg" alt="">
