--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
         </section>
 
         <!-- ClIENTES -->
-        <section class="border-top">
+        <!-- <section class="border-top">
             <div class="container">
                 <div class="row">
                     <div class="col-12 text-center" data-aos="fade-down" data-aos-delay="50">
@@ -371,7 +371,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
 
     </main>
 
