--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                             </div>
                             <div class="col-md-9">
                                 <p class="m-0">Escríbenos</p>
-                                <a href="mailto:cotizaciones@rodconsulting.com">cotizaciones@rodconsulting.com</a>
+                                <a href="mailto:cotizaciones@rodconsulting.com">cotizaciones@rodconsulting.com.co</a>
                             </div>
                         </div>
                     </div>
@@ -419,9 +419,10 @@
                             <h5 class="mb-0">CONTACTO</h5>
                             <div class="line"></div>
                             <ul>
+                                <li><a href="mailto:cotizaciones@rodconsulting.com">cotizaciones@rodconsulting.com.co</a></li>
+                                <li><a class="m-0" href="tel:+573188737324">+57 3188737324</a></li>
+                                <li>www.rodconsulting.com.co</li>
                                 <li>Sabaneta - Antioquia</li>
-                                <li>+57 3188737324</li>
-                                <li>www.rodconsulting.co</li>
                             </ul>
                         </div>
                     </div>
@@ -429,7 +430,7 @@
             </div>
             <div class="footer-bottom py-3">
                 <div class="container text-center">
-                    <p class="mb-0">ROD Consulting Ingenieria Eléctrica © 2022</p>
+                    <p class="mb-0">ROD Consulting Ingenieria Eléctrica © 2023</p>
                 </div>
                 <div class="container text-center">
                     <p class="mb-0">
